--- a/index.html
+++ b/index.html
@@ -6,19 +6,16 @@
     <title>Tarot do dia</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <link href="https://fonts.googleapis.com/css2?family=Borel&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <h1>Tarot do dia</h1>
         <div id="carta-container">
             <img id="carta-imagem" src="" alt="Carta principal" style="display: none;">
-            <p id="descrição-carta">Clique no botão para sortear uma carta</p>
         </div>
+        <p id="descrição-carta">Clique no botão para sortear uma carta</p>
         <div id="animação-container">
-            <div class="carta-animada"></div>
-            <div class="carta-animada"></div>
-            <div class="carta-animada"></div>
-            <div class="carta-animada"></div>
         </div>
         <button id="embaralhar-btn">Embaralhar</button>
         <button id="sortear-btn">Sortear Carta</button>
